--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "join_backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend for JOIN",
   "main": "index.js",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,10 +10,20 @@
     "type": "git",
     "url": "git+https://gitlab.com/akhmal22/join_backend.git"
   },
-  "author": "",
+  "keywords": [
+    "backend"
+  ],
+  "author": "akhmal22",
   "license": "ISC",
   "bugs": {
     "url": "https://gitlab.com/akhmal22/join_backend/issues"
   },
-  "homepage": "https://gitlab.com/akhmal22/join_backend#readme"
+  "homepage": "https://gitlab.com/akhmal22/join_backend#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1"
+  }
 }
