--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "npm": "^6.14.5"
   }
 }
